--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 # Add source to this project's executable.
-add_executable(vulkan_guide
+add_executable(vulkan_start
     main.cpp
     vk_engine.cpp
     vk_engine.h
@@ -9,11 +9,11 @@ add_executable(vulkan_guide
     vk_initializers.h)
 
 
-set_property(TARGET vulkan_guide PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:vulkan_guide>")
+set_property(TARGET vulkan_start PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:vulkan_guide>")
 
-target_include_directories(vulkan_guide PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
-target_link_libraries(vulkan_guide vkbootstrap vma glm tinyobjloader imgui stb_image)
+target_include_directories(vulkan_start PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
+target_link_libraries(vulkan_start vkbootstrap vma glm tinyobjloader imgui stb_image)
 
-target_link_libraries(vulkan_guide Vulkan::Vulkan sdl2)
+target_link_libraries(vulkan_start Vulkan::Vulkan sdl2)
 
-add_dependencies(vulkan_guide Shaders)
+add_dependencies(vulkan_start Shaders)
