Implemented textured rendering

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,9 @@ add_executable(vulkan_start
     vk_initializers.cpp
     vk_initializers.h
     vk_mesh.h
-    vk_mesh.cpp)
+    vk_mesh.cpp
+    vk_textures.h
+    vk_textures.cpp)
 
 
 set_property(TARGET vulkan_start PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:vulkan_start>")
